--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages. test test</p>
+<p>I'm hosted with GitHub Pages.</p>
+<p>
+    <a href="https://litony.github.io/assorted_css/"">Assorted CSS</a>
+</p>
 </body>
 </html>
