--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Hello, this is my [Tony Li's] page.</h1>
 <p>
     <a href="https://litony.github.io/assorted_css/"">Assorted CSS</a>
+    <a href="https://litony.github.io/assorted_css/"">Assorted CSS</a>
 </p>
+<p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
