--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <h1>Hello, this is my [Tony Li's] page.</h1>
 <p>
     <a href="https://litony.github.io/assorted_css/"">Assorted CSS</a>
+</p>
+<p>
+    <a href="https://litony.github.io/assorted_css/"">Assorted CSS</a>
+</p>
+<p>
     <a href="https://litony.github.io/assorted_css/"">Assorted CSS</a>
 </p>
 <p>I'm hosted with GitHub Pages.</p>
