--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <body>
 <h1>Hello, this is my [Tony Li's] page.</h1>
 <p>
-    <a href="https://litony.github.io/assorted_css/"">Assorted CSS</a>
+    <a href="https://litony.github.io/assorted_css/">Assorted CSS Page</a>
+    <a href="https://github.com/LiTony/assorted_css">Assorted CSS Repo</a>
 </p>
 <p>
-    <a href="https://litony.github.io/assorted_css/"">Assorted CSS</a>
+    <a href="https://litony.github.io/assorted_css/">Assorted CSS Page</a>
+    <a href="https://github.com/LiTony/assorted_css">Assorted CSS Repo</a>
 </p>
 <p>
-    <a href="https://litony.github.io/assorted_css/"">Assorted CSS</a>
+    <a href="https://litony.github.io/assorted_css/">Assorted CSS Page</a>
+    <a href="https://github.com/LiTony/assorted_css">Assorted CSS Repo</a>
 </p>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
