--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <a href="https://github.com/LiTony/assorted_css">Assorted CSS Repo</a>
 </p>
 <p>
-    <a href="https://litony.github.io/assorted_css/">Assorted CSS Page</a>
-    <a href="https://github.com/LiTony/assorted_css">Assorted CSS Repo</a>
+    <a href="https://litony.github.io/ui-ux-project/">UI-UX Project Page</a>
+    <a href="https://github.com/LiTony/ui-ux-project">UI-UX Project Repo</a>
 </p>
 <p>
     <a href="https://litony.github.io/assorted_css/">Assorted CSS Page</a>
