modified index.html add style.css
add stylesheet, add info paragraph

--- a/index.html
+++ b/index.html
@@ -2,17 +2,18 @@
 <html>
 <body>
 <h1>Hello, this is my [Tony Li's] page.</h1>
-<p>
+<p class="personalsummary">
+    I'm a senior student at California Polytechnic State University San Luis Obispo, studying Computer Science, graduating in Spring 2023.
+    I'm interested in web development and data science.
+    I'm currently looking for a position out of college in the above fields!
+</p>
+<p class="pagerepo">
     <a href="https://litony.github.io/assorted_css/">Assorted CSS Page</a>
     <a href="https://github.com/LiTony/assorted_css">Assorted CSS Repo</a>
 </p>
-<p>
+<p class="pagerepo">
     <a href="https://litony.github.io/ui-ux-project/">UI-UX Project Page</a>
     <a href="https://github.com/LiTony/ui-ux-project">UI-UX Project Repo</a>
-</p>
-<p>
-    <a href="https://litony.github.io/assorted_css/">Assorted CSS Page</a>
-    <a href="https://github.com/LiTony/assorted_css">Assorted CSS Repo</a>
 </p>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
