--- a/about.html
+++ b/about.html
@@ -15,15 +15,14 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-    <h1>Hello, this is my [Tony Li's] home page containing project pages and repos.</h1>
-    <p class="pagerepo">
-        <a href="https://litony.github.io/assorted_css/">Assorted CSS Page</a>
-        <a href="https://github.com/LiTony/assorted_css">Assorted CSS Repo</a>
-    </p>
-    <p class="pagerepo">
-        <a href="https://litony.github.io/ui-ux-project/">UI-UX Project Page</a>
-        <a href="https://github.com/LiTony/ui-ux-project">UI-UX Project Repo</a>
-    </p>
+    <h1>Hello, this is my [Tony Li's] about page.</h1>
+    <div class="personalsummary">
+        <p>
+            I'm a senior student at California Polytechnic State University San Luis Obispo, studying Computer Science, graduating in Spring 2023.
+            I'm interested in web development and data science.
+            I'm currently looking for a position out of college in the above fields!
+        </p>
+    </div>
     <p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
