--- a/contact.html
+++ b/contact.html
@@ -15,14 +15,9 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-    <h1>Hello, this is my [Tony Li's] home page containing project pages and repos.</h1>
-    <p class="pagerepo">
-        <a href="https://litony.github.io/assorted_css/">Assorted CSS Page</a>
-        <a href="https://github.com/LiTony/assorted_css">Assorted CSS Repo</a>
-    </p>
-    <p class="pagerepo">
-        <a href="https://litony.github.io/ui-ux-project/">UI-UX Project Page</a>
-        <a href="https://github.com/LiTony/ui-ux-project">UI-UX Project Repo</a>
+    <h1>Hello, this is my [Tony Li's] contact page.</h1>
+    <p class="contactinfo">
+        <a href="mailto:"></a>
     </p>
     <p>I'm hosted with GitHub Pages.</p>
 </body>
