--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
         <a href="https://litony.github.io/ui-ux-project/">UI-UX Project Page</a>
         <a href="https://github.com/LiTony/ui-ux-project">UI-UX Project Repo</a>
     </p>
+    
+    <section id="first">First Section</section>
+    <section id="second">Second Section</section>
+    <section id="third">Third Section</section>
     <p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
