--- a/about.html
+++ b/about.html
@@ -23,6 +23,8 @@
             I'm currently looking for a position out of college in the above fields!
         </p>
     </div>
-    <p>I'm hosted with GitHub Pages.</p>
+    <footer>
+        <p>I'm hosted with GitHub Pages.</p>
+    </footer>
 </body>
 </html>
