--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,8 @@
     <p class="contactinfo">
         <a href="mailto:"></a>
     </p>
-    <p>I'm hosted with GitHub Pages.</p>
+    <footer>
+        <p>I'm hosted with GitHub Pages.</p>
+    </footer>
 </body>
 </html>
