--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     <section id="first">First Section</section>
     <section id="second">Second Section</section>
     <section id="third">Third Section</section>
-    <p>I'm hosted with GitHub Pages.</p>
+    <footer>
+        <p>I'm hosted with GitHub Pages.</p>
+    </footer>
 </body>
 </html>
