--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
 <body>
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="index.html" target="_self">Home</a></li>
+            <li><a href="about.html" target="_self">About</a></li>
+            <li><a href="contact.html" target="_self">Contact</a></li>
         </ul>
     </nav>
     <h1>Hello, this is my [Tony Li's] home page containing project pages and repos.</h1>
     <p class="pagerepo">
-        <a href="https://litony.github.io/assorted_css/">Assorted CSS Page</a>
-        <a href="https://github.com/LiTony/assorted_css">Assorted CSS Repo</a>
+        <a href="https://litony.github.io/assorted_css/" target="_self">Assorted CSS Page</a>
+        <a href="https://github.com/LiTony/assorted_css" target="_blank">Assorted CSS Repo</a>
     </p>
     <p class="pagerepo">
-        <a href="https://litony.github.io/ui-ux-project/">UI-UX Project Page</a>
-        <a href="https://github.com/LiTony/ui-ux-project">UI-UX Project Repo</a>
+        <a href="https://litony.github.io/ui-ux-project/" target="_self">UI-UX Project Page</a>
+        <a href="https://github.com/LiTony/ui-ux-project" target="_blank">UI-UX Project Repo</a>
     </p>
     
     <section id="first">First Section</section>
