--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
         </p>
     </div>
     <footer>
-        <p>I'm hosted with GitHub Pages.</p>
+        <p>I'm hosted with GitHub Pages!</p>
     </footer>
 </body>
 </html>
