--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
         <a href="mailto:"></a>
     </p>
     <footer>
-        <p>I'm hosted with GitHub Pages.</p>
+        <p>I'm hosted with GitHub Pages!</p>
     </footer>
 </body>
 </html>
