--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section id="second">Second Section</section>
     <section id="third">Third Section</section>
     <footer>
-        <p>I'm hosted with GitHub Pages.</p>
+        <p>I'm hosted with GitHub Pages!</p>
     </footer>
 </body>
 </html>
