sections to html
for scrolling purposes

--- a/about.html
+++ b/about.html
@@ -23,6 +23,9 @@
             I'm currently looking for a position out of college in the above fields!
         </p>
     </div>
+    <section id="first">First Section</section>
+    <section id="second">Second Section</section>
+    <section id="third">Third Section</section>
     <footer>
         <p>I'm hosted with GitHub Pages!</p>
     </footer>
