--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,9 @@
     <p class="contactinfo">
         <a href="mailto:"></a>
     </p>
+    <section id="first">First Section</section>
+    <section id="second">Second Section</section>
+    <section id="third">Third Section</section>
     <footer>
         <p>I'm hosted with GitHub Pages!</p>
     </footer>
