--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         <a href="https://github.com/LiTony/ui-ux-project" target="_blank">UI-UX Project Repo</a>
     </p>
     
-    <section id="first">First Section</section>
-    <section id="second">Second Section</section>
-    <section id="third">Third Section</section>
+    <section id="first">Section One</section>
+    <section id="second">Section Two</section>
+    <section id="third">Section Three</section>
     <footer>
         <p>I'm hosted with GitHub Pages!</p>
     </footer>
