--- a/about.html
+++ b/about.html
@@ -23,9 +23,9 @@
             I'm currently looking for a position out of college in the above fields!
         </p>
     </div>
-    <section id="first">Section One</section>
-    <section id="second">Section Two</section>
-    <section id="third">Section Three</section>
+    <section id="first" class="primary">Section One</section>
+    <section id="second" class="alt">Section Two</section>
+    <section id="third" class="peach">Section Three</section>
     <footer>
         <p>I'm hosted with GitHub Pages!</p>
     </footer>
