--- a/contact.html
+++ b/contact.html
@@ -19,9 +19,9 @@
     <p class="contactinfo">
         <a href="mailto:"></a>
     </p>
-    <section id="first">Section One</section>
-    <section id="second">Section Two</section>
-    <section id="third">Section Three</section>
+    <section id="first" class="primary">Section One</section>
+    <section id="second" class="alt">Section Two</section>
+    <section id="third" class="peach">Section Three</section>
     <footer>
         <p>I'm hosted with GitHub Pages!</p>
     </footer>
