--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
     </nav>
     <h1>Hello, this is my [Tony Li's] home page containing project pages and repos.</h1>
     
-    <section id="first">Section One
+    <section id="first" class="primary">Section One
         <p class="pagerepo">
             <a href="https://litony.github.io/assorted_css/" target="_self">Assorted CSS Page</a>
             <a href="https://github.com/LiTony/assorted_css" target="_blank">Assorted CSS Repo</a>
         </p>
     </section>
-    <section id="second">Section Two
+    <section id="second" class="alt">Section Two
         <p class="pagerepo">
             <a href="https://litony.github.io/ui-ux-project/" target="_self">UI-UX Project Page</a>
             <a href="https://github.com/LiTony/ui-ux-project" target="_blank">UI-UX Project Repo</a>
         </p>
     </section>
-    <section id="third">Section Three</section>
+    <section id="third" class="peach">Section Three</section>
     <footer>
         <p>I'm hosted with GitHub Pages!</p>
     </footer>
