--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <li><a href="index.html" target="_self">Home</a></li>
             <li><a href="about.html" target="_self">About</a></li>
             <li><a href="contact.html" target="_self">Contact</a></li>
+            <li><a href="landing.html" target="_self">Landing</a></li>
         </ul>
     </nav>
     <h1>Hello, this is my [Tony Li's] home page containing project pages and repos.</h1>
