--- a/contact.html
+++ b/contact.html
@@ -10,9 +10,10 @@
 <body>
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="index.html" target="_self">Home</a></li>
+            <li><a href="about.html" target="_self">About</a></li>
+            <li><a href="contact.html" target="_self">Contact</a></li>
+            <li><a href="landing.html" target="_self">Landing</a></li>
         </ul>
     </nav>
     <h1>Hello, this is my [Tony Li's] contact page.</h1>
