image hover effect

--- a/landing.html
+++ b/landing.html
@@ -11,13 +11,41 @@
     <div id="wrapperOut">
     </div>
     <div id="wrapper">
-        <div class="shape"></div>
-        <div class="shape"></div>
-        <div class="shape"></div>
-        <div class="shape"></div>
-        <div class="shape"></div>
-        <div class="shape"></div>
-        <div class="shape"></div>
+        <div class="shape">
+            <div class="shape-content">
+                <img class="shape-content-img" src="pfp2.jpg">
+            </div>
+        </div>
+        <div class="shape">
+            <div class="shape-content">
+                <img class="shape-content-img" src="pfp2.jpg">
+            </div>
+        </div>
+        <div class="shape">
+            <div class="shape-content">
+                <img class="shape-content-img" src="pfp2.jpg">
+            </div>
+        </div>
+        <div class="shape">
+            <div class="shape-content">
+                <img class="shape-content-img" src="pfp2.jpg">
+            </div>
+        </div>
+        <div class="shape">
+            <div class="shape-content">
+                <img class="shape-content-img" src="pfp2.jpg">
+            </div>
+        </div>
+        <div class="shape">
+            <div class="shape-content">
+                <img class="shape-content-img" src="pfp2.jpg">
+            </div>
+        </div>
+        <div class="shape">
+            <div class="shape-content">
+                <img class="shape-content-img" src="pfp2.jpg">
+            </div>
+        </div>
     </div>
     <a id="source-link" class="meta-link" href="https://karinasirqueira.com" target="_blank">
         <svg fill="#000000" width="25px" height="25px" viewBox="0 0 24 24" id="link-alt-2" data-name="Line Color" xmlns="http://www.w3.org/2000/svg" class="icon line-color"><path id="secondary" d="M14.5,9.5a3.54,3.54,0,0,1,0,5l-5,5a3.54,3.54,0,0,1-5,0h0a3.54,3.54,0,0,1,0-5" style="fill: none; stroke: rgb(44, 169, 188); stroke-linecap: round; stroke-linejoin: round; stroke-width: 2;"></path><path id="primary" d="M19.5,9.5a3.54,3.54,0,0,0,0-5h0a3.54,3.54,0,0,0-5,0l-5,5a3.54,3.54,0,0,0,0,5h0" style="fill: none; stroke: rgb(219, 210, 210); stroke-linecap: round; stroke-linejoin: round; stroke-width: 2;"></path></svg>
