--- a/index.html
+++ b/index.html
@@ -4,35 +4,79 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    <title>Landing Page</title>
+    <link rel="stylesheet" href="./landing.css">
+    <title>Menu</title>
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="index.html" target="_self">Home</a></li>
-            <li><a href="about.html" target="_self">About</a></li>
-            <li><a href="contact.html" target="_self">Contact</a></li>
-            <li><a href="landing.html" target="_self">Landing</a></li>
-        </ul>
-    </nav>
-    <h1>Hello, this is my [Tony Li's] home page containing project pages and repos.</h1>
-    
-    <section id="first" class="primary">Section One
-        <p class="pagerepo">
-            <a href="https://litony.github.io/assorted_css/" target="_self">Assorted CSS Page</a>
-            <a href="https://github.com/LiTony/assorted_css" target="_blank">Assorted CSS Repo</a>
-        </p>
-    </section>
-    <section id="second" class="alt">Section Two
-        <p class="pagerepo">
-            <a href="https://litony.github.io/ui-ux-project/" target="_self">UI-UX Project Page</a>
-            <a href="https://github.com/LiTony/ui-ux-project" target="_blank">UI-UX Project Repo</a>
-        </p>
-    </section>
-    <section id="third" class="peach">Section Three</section>
-    <footer>
-        <p>I'm hosted with GitHub Pages!</p>
-    </footer>
+    <div id="wrapperOut">
+    </div>
+    <div id="wrapper">
+        <div class="shape">
+            <div class="shape-content">
+                <a href="https://litony.github.io/assorted_css/" target="_self">
+                    <img class="shape-content-img" src="pfp2.jpg">
+                </a>
+            </div>
+        </div>
+        <div class="shape">
+            <div class="shape-content">
+                <a href="https://litony.github.io/ui-ux-project/" target="_self">
+                    <img class="shape-content-img" src="https://images.unsplash.com/photo-1630852722075-0fd74c222ad8?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="profile-picture">>
+                </a>
+            </div>
+        </div>
+        <div class="shape">
+            <div class="shape-content">
+                <a href="" target="_self">
+                    <img class="shape-content-img" src="">
+                </a>
+            </div>
+        </div>
+        <div class="shape">
+            <div class="shape-content">
+                <a href="" target="_self">
+                    <img class="shape-content-img" src="">
+                </a>
+            </div>
+        </div>
+        <div class="shape">
+            <div class="shape-content">
+                <a href="" target="_self">
+                    <img class="shape-content-img" src="">
+                </a>
+            </div>
+        </div>
+        <div class="shape">
+            <div class="shape-content">
+                <a href="" target="_self">
+                    <img class="shape-content-img" src="">
+                </a>
+            </div>
+        </div>
+        <div class="shape">
+            <div class="shape-content">
+                <a href="" target="_self">
+                    <img class="shape-content-img" src="">
+                </a>
+            </div>
+        </div>
+    </div>
+    <a id="source-link" class="meta-link" href="https://karinasirqueira.com" target="_blank">
+        <svg fill="#000000" width="25px" height="25px" viewBox="0 0 24 24" id="link-alt-2" data-name="Line Color" xmlns="http://www.w3.org/2000/svg" class="icon line-color"><path id="secondary" d="M14.5,9.5a3.54,3.54,0,0,1,0,5l-5,5a3.54,3.54,0,0,1-5,0h0a3.54,3.54,0,0,1,0-5" style="fill: none; stroke: rgb(44, 169, 188); stroke-linecap: round; stroke-linejoin: round; stroke-width: 2;"></path><path id="primary" d="M19.5,9.5a3.54,3.54,0,0,0,0-5h0a3.54,3.54,0,0,0-5,0l-5,5a3.54,3.54,0,0,0,0,5h0" style="fill: none; stroke: rgb(219, 210, 210); stroke-linecap: round; stroke-linejoin: round; stroke-width: 2;"></path></svg>
+        <span>Source</span>
+    </a>    
+    <a id="return-link" class="meta-link" href="index.html" target="_blank">
+        <svg fill="#FFFFFF" width="25px" height="25px" viewBox="-6 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg">
+            <title>github</title>
+            <path d="M18.36 9.28c0.48-1.72-0.24-3.6-0.28-3.72-0.12-0.28-0.4-0.52-0.72-0.52-0.080 0-1.92-0.16-3.76 1.24-1.44-0.28-3.080-0.36-3.16-0.36-0.040 0-0.040 0-0.080 0-0.080 0-1.72 0.080-3.16 0.36-1.84-1.4-3.68-1.24-3.76-1.24-0.32 0.040-0.6 0.24-0.72 0.52-0.040 0.080-0.8 2-0.28 3.72-0.92 1.28-1.64 2.96-1 5.96 0.6 2.72 2.84 4.24 5.16 4.76-0.2 0.56-0.28 1.24-0.36 1.96-0.96 0.040-1.56-0.52-2.4-1.4-0.72-0.76-1.52-1.64-2.84-1.92-0.44-0.12-0.88 0.16-1 0.64-0.080 0.48 0.2 0.92 0.68 1 0.76 0.16 1.28 0.72 1.92 1.4 0.84 0.88 1.8 1.96 3.52 1.96 0 0 0.040 0 0.040 0 0 0.92 0.080 1.8 0.12 2.52 0.040 0.48 0.44 0.8 0.92 0.76s0.8-0.44 0.76-0.92c-0.24-2.72-0.040-5.6 0.4-6 0.32-0.2 0.52-0.56 0.4-0.96-0.080-0.36-0.4-0.64-0.8-0.64-0.36 0-4.12-0.2-4.84-3.52-0.6-2.72 0.16-3.92 0.96-4.88 0.2-0.24 0.24-0.6 0.12-0.92-0.32-0.68-0.2-1.64-0.040-2.28 0.56 0.080 1.4 0.32 2.28 1.080 0.2 0.2 0.48 0.24 0.76 0.2 1.24-0.32 2.92-0.4 3.2-0.4 0.24 0 1.96 0.080 3.2 0.4 0.28 0.080 0.56 0 0.76-0.2 0.88-0.76 1.76-1 2.28-1.080 0.16 0.6 0.28 1.56-0.040 2.28-0.12 0.28-0.080 0.64 0.12 0.92 0.8 0.96 1.52 2.16 0.96 4.88-0.72 3.32-4.48 3.52-4.92 3.56-0.4 0-0.72 0.28-0.8 0.64s0.080 0.76 0.4 0.96c0.48 0.4 0.68 3.24 0.44 6-0.040 0.48 0.32 0.88 0.76 0.92 0.040 0 0.040 0 0.080 0 0.44 0 0.8-0.32 0.84-0.76 0.16-1.76 0.28-4.48-0.28-6.2 2.32-0.48 4.56-2.040 5.16-4.76 0.64-3-0.040-4.68-1-5.96z"></path>
+        </svg>
+        <span>Return</span>
+    </a>
+    <a id="yt-link" class="meta-link" href="https://youtu.be/dhfQnmGXSwU" target="_blank">
+        <svg width="25px" height="25px" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" fill="none"><path fill="red" d="M14.712 4.633a1.754 1.754 0 00-1.234-1.234C12.382 3.11 8 3.11 8 3.11s-4.382 0-5.478.289c-.6.161-1.072.634-1.234 1.234C1 5.728 1 8 1 8s0 2.283.288 3.367c.162.6.635 1.073 1.234 1.234C3.618 12.89 8 12.89 8 12.89s4.382 0 5.478-.289a1.754 1.754 0 001.234-1.234C15 10.272 15 8 15 8s0-2.272-.288-3.367z"/><path fill="#ffffff" d="M6.593 10.11l3.644-2.098-3.644-2.11v4.208z"/></svg>
+        <span>Hyperplexed's tutorial video</span>
+    </a>
+    <script src="./landing.js"></script>
+
 </body>
 </html>
